// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colortbl cellcolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; \\cellcolor{red} b \\\\ \\cellcolor{yellow} c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; \\cellcolor{red} b \\\\ \\cellcolor{yellow} c &amp; d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd mathbackground="yellow">
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd>
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl cellcolor in pmatrix 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\pmatrix{ \\cellcolor{red} a }" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\pmatrix{ \\cellcolor{red} a }">
    <mo data-mjx-texclass="OPEN">(</mo>
    <mtable rowspacing="4pt" columnspacing="1em" data-frame-styles="" framespacing=".2em .125em">
      <mtr data-latex="{">
        <mtd mathbackground="red">
          <mi data-latex="a">a</mi>
        </mtd>
      </mtr>
    </mtable>
    <mo data-mjx-texclass="CLOSE">)</mo>
  </mrow>
</math>"
`;

exports[`Colortbl cellcolor in preamble 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{c&gt;{\\cellcolor{yellow}}c} a &amp; b \\\\ c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\cellcolor{yellow}d\\end{array}">
    <mtr data-latex="{c&gt;{\\cellcolor{yellow}}c}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{c&gt;{\\cellcolor{yellow}}c}">
      <mtd>
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl cellcolor late 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; b \\cellcolor{red} \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; b \\cellcolor{red} \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="\\cellcolor{red}">b</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl cellcolor with color model 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\matrix{ \\cellcolor[rgb]{1,0,0} a }" display="block">
  <mtable rowspacing="4pt" columnspacing="1em" data-frame-styles="" framespacing=".2em .125em" data-latex="\\matrix{ \\cellcolor[rgb]{1,0,0} a }">
    <mtr data-latex="{">
      <mtd mathbackground="#ff0000">
        <mi data-latex="a">a</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl cellcolor with columncolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red} b \\\\ c &amp; \\cellcolor{yellow} d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red} b \\\\ c &amp; \\cellcolor{yellow} d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl cellcolor with columncolor and rowcolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red} b \\\\ \\rowcolor{yellow} c &amp; \\cellcolor{green} d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red} b \\\\ \\rowcolor{yellow} c &amp; \\cellcolor{green} d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd mathbackground="yellow">
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="green">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl cellcolor with frame 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{|c|} \\cellcolor{red} a \\end{array}" display="block">
  <menclose notation="left right" data-padding="0" data-latex="\\begin{array}{|c|} \\cellcolor{red} a \\end{array}">
    <mtable columnspacing="1em" rowspacing="4pt" data-frame-styles="" framespacing=".5em .125em">
      <mtr data-latex="{|c|}">
        <mtd mathbackground="red">
          <mi data-latex="a">a</mi>
        </mtd>
      </mtr>
    </mtable>
  </menclose>
</math>"
`;

exports[`Colortbl cellcolor with rowcolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; b \\\\ \\rowcolor{red} c &amp; \\cellcolor{yellow} d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; b \\\\ \\rowcolor{red} c &amp; \\cellcolor{yellow} d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd>
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd mathbackground="red">
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl color with no frame 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\matrix{ \\cellcolor[rgb]{1,0,0} a }" display="block">
  <mtable rowspacing="4pt" columnspacing="1em" data-frame-styles="" data-latex="\\matrix{ \\cellcolor[rgb]{1,0,0} a }">
    <mtr data-latex="{">
      <mtd mathbackground="#ff0000">
        <mi data-latex="a">a</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl columncolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; \\columncolor{yellow} b \\\\ c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; \\columncolor{yellow} b \\\\ c &amp; d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl columncolor and rowcolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red} b \\\\ \\rowcolor{yellow} c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red} b \\\\ \\rowcolor{yellow} c &amp; d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd mathbackground="yellow">
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl columncolor ignore overlap 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red}[ignore][ignore] b \\\\ c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; \\columncolor{red}[ignore][ignore] b \\\\ c &amp; d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="red">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl columncolor in preamble 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{c&gt;{\\columncolor{yellow}}c} a &amp; b \\\\ c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\columncolor{yellow}d\\end{array}">
    <mtr data-latex="{c&gt;{\\columncolor{yellow}}c}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{c&gt;{\\columncolor{yellow}}c}">
      <mtd>
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Colortbl rowcolor 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{array}{cc} a &amp; b \\\\ \\rowcolor{yellow} c &amp; d \\end{array}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" data-frame-styles="" framespacing=".5em .125em" data-latex="\\begin{array}{cc} a &amp; b \\\\ \\rowcolor{yellow} c &amp; d \\end{array}">
    <mtr data-latex="{cc}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd>
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{cc}">
      <mtd mathbackground="yellow">
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd mathbackground="yellow">
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;
